<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_music_card_background" />

    <ImageView
        android:id="@+id/ivImageSong"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="37dp"
        android:src="@drawable/icon_image"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/twilight_sonata"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/tvAuthorSong"
        app:layout_constraintStart_toEndOf="@+id/ivImageSong"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tvNumberSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_1"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/ivImageSong"
        app:layout_constraintEnd_toStartOf="@+id/ivImageSong"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/ivImageSong" />

    <TextView
        android:id="@+id/tvAuthorSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/jasper_winslow"
        android:textColor="@color/middle_grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/tvTitleSong"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSong" />
</androidx.constraintlayout.widget.ConstraintLayout>